--- a/src/main/resources/assets/saltymod/lang/en_US.lang
+++ b/src/main/resources/assets/saltymod/lang/en_US.lang
@@ -18,7 +18,7 @@ potion.inspired=Inspired
 tile.salt_ore.name=Salt Ore
 tile.deepslate_salt_ore.name=Deepslate Salt Ore
 tile.etfuturum.deepslate_saltore.name=Deepslate Salt Ore
-tile.salt_lake.name=Salt Lake Bottom
+tile.salt_lake.name=Dried Salt
 tile.salt_block.name=Salt Block
 tile.salt_chiseled_block.name=Chiseled Salt Block
 tile.salt_pillar.name=Salt Pillar
