--- a/src/main/resources/assets/saltymod/lang/en_US.lang
+++ b/src/main/resources/assets/saltymod/lang/en_US.lang
@@ -34,7 +34,7 @@ tile.salt_slab.pillar.name=Salt Pillar Slab
 tile.salt_lamp.name=Salt Lamp
 tile.salt_grass.name=Salt Grass Block
 tile.salt_dirt_lite.name=Light Salt Dirt
-tile.salt_dirt_lake.name=Salt Lake Bottom
+tile.salt_dirt_lake.name=Salt Lake Dirt
 tile.salt_dirt.name=Salt Dirt
 tile.salt_dirt.mess=Any more salt and you might aswell sprinke rat poison on it...
 tile.reeds_block.name=Marsh Reeds Bale
